manifests/istio-policies/manifests/default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: <your-namespace>
spec:
  {}
